fix spacing issues

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,6 +1,16 @@
+$breakpoint: 48em;
+
 .shell {
   margin: 0 auto;
   max-width: 54em;
+}
+
+.main {
+  padding: 0 1ex;
+
+  @media screen and (min-width: $breakpoint) {
+    padding: 0;
+  }
 }
 
 footer {
@@ -8,4 +18,12 @@ footer {
   font-style: italic;
   margin-top: 1em;
   text-align: center;
+}
+
+.spacer {
+  display: none;
+
+  @media screen and (min-width: $breakpoint) {
+    display: block;
+  }
 }
